# MZM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: bulid.yml  cmake-single-platform.yml
src/: MainWindow.hpp  Mem.h  cheat.hpp  main.cpp  myimgui.cpp  myimgui.h
